--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <meta property="og:title" content="77170 Brie-Comte-Robert" />
   <meta property="og:description" content="HAHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
-  <!-- <meta property="og:image" content="https://swii-api.tekup.vn/api/v1/attachments/66068a5db178dd02a1101c50" /> -->
+  <meta property="og:image" content="https://swii-api.tekup.vn/api/v1/attachments/66068a5db178dd02a1101c50" />
   <meta property="og:url" content="https://swii-api.tekup.vn/api/v1/property-share/6852817dd1ae991fbef0aac5" />
   <meta property="og:type" content="website" />
 </head>
