--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <h1>77170 Brie-Comte-Robert</h1>
   <p>À louer: 200 €, Besoin de service</p>
-  <!-- <img src="https://swii-api.tekup.vn/api/v1/attachments/66068a5db178dd02a1101c50" alt="Property Image" /> -->
+  <img src="https://swii-api.tekup.vn/api/v1/attachments/66068a5db178dd02a1101c50" alt="Property Image" />
 </body>
 
 </html>
